# FileTwin

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  sync.rs
